...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackground">

                <ImageButton
                    android:id="@+id/EarthImageButton"
                    android:layout_width="364dp"
                    android:layout_height="267dp"
                    android:layout_marginTop="28dp"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/picture_of_earth"
                    android:cropToPadding="false"
...
